--- a/GoogleSpeech.html
+++ b/GoogleSpeech.html
@@ -22,7 +22,8 @@
     <link href="//www.google.com/images/icons/product/chrome-32.png" rel="icon" type="image/ico">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel=
     "stylesheet">
-    <link href="demo.css" rel="stylesheet">
+    <link href="GoogleSpeech.css" rel="stylesheet">
+    <script src="//www.google.com/js/gweb/analytics/autotrack.js">
 </script>
     <script>
 new gweb.analytics.AutoTrack({
@@ -90,7 +91,8 @@ a.c1 {font-weight: normal;}
       <div class="compact marquee-stacked" id="marquee">
         <div class="marquee-copy">
           <h1>
-            Speech Recognizer Demonstration
+            <a class="c1" href="http://dvcs.w3.org/hg/speech-api/raw-file/tip/speechapi.html">Web
+            Speech API</a> Demonstration
           </h1>
         </div>
       </div>
@@ -128,13 +130,32 @@ a.c1 {font-weight: normal;}
           </p>
         </div>
         <div id="div_start">
-          <button id="start_button" onclick="startButton(event)">Start/Stop</button>
+          <button id="start_button" onclick="startButton(event)"><img alt="Start" id="start_img"
+          src="/intl/en/chrome/assets/common/images/content/mic.gif"></button>
         </div>
         <div id="results">
           <span class="final" id="final_span"></span> <span class="interim" id=
           "interim_span"></span>
         </div>
         <div id="copy">
+          <button class="button" id="copy_button" onclick="copyButton()">Copy and Paste</button>
+          <div id="copy_info">
+            <p>
+              Press Control-C to copy text.
+            </p>
+            <p>
+              (Command-C on Mac.)
+            </p>
+          </div><button class="button" id="email_button" onclick="emailButton()">Create
+          Email</button>
+          <div id="email_info">
+            <p>
+              Text sent to default email application.
+            </p>
+            <p>
+              (See chrome://settings/handlers to change.)
+            </p>
+          </div>
         </div>
         <div class="compact marquee" id="div_language">
           <select id="select_language" onchange="updateCountry()">
@@ -279,17 +300,17 @@ if (!('webkitSpeechRecognition' in window)) {
   recognition.onstart = function() {
     recognizing = true;
     showInfo('info_speak_now');
-    start_img.src = 'micro.gif';
+    start_img.src = '/intl/en/chrome/assets/common/images/content/mic-animate.gif';
   };
 
   recognition.onerror = function(event) {
     if (event.error == 'no-speech') {
-      start_img.src = 'micro.gif';
+      start_img.src = '/intl/en/chrome/assets/common/images/content/mic.gif';
       showInfo('info_no_speech');
       ignore_onend = true;
     }
     if (event.error == 'audio-capture') {
-      start_img.src = 'micro.gif';
+      start_img.src = '/intl/en/chrome/assets/common/images/content/mic.gif';
       showInfo('info_no_microphone');
       ignore_onend = true;
     }
@@ -308,7 +329,7 @@ if (!('webkitSpeechRecognition' in window)) {
     if (ignore_onend) {
       return;
     }
-    start_img.src = 'micro.gif';
+    start_img.src = '/intl/en/chrome/assets/common/images/content/mic.gif';
     if (!final_transcript) {
       showInfo('info_start');
       return;
@@ -410,7 +431,7 @@ function startButton(event) {
   ignore_onend = false;
   final_span.innerHTML = '';
   interim_span.innerHTML = '';
-  start_img.src = 'micro.gif';
+  start_img.src = '/intl/en/chrome/assets/common/images/content/mic-slash.gif';
   showInfo('info_allow');
   showButtons('none');
   start_timestamp = event.timeStamp;
